# Excalibur-Project

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
pages/: 1_dashboard.py  2_question_generator.py  3_schedule.py
src/textquery/: __init__.py  cleaner.py  database.py  embeddings.py  pdf_processor.py  question_generator.py  translator.py
student_data/: info_about_dataset.txt  student.ipynb  student.py  student_training.ipynb  student_visualization.ipynb
tests/: test_cleaner.py  test_pdf_processor.py
