[metadata]
name = textquery
version = 0.1.0
description = Text processing and question generation from documents
author = Your Name
author_email = your.email@example.com
long_description = file README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find
python_requires = >=3.7
install_requires =
    sentence-transformers
    transformers
    deep-translator
    weaviate-client
    PyPDF2
    streamlit

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest==6.0
    pytest-cov
    black
    flake8
    mypy
    isort
    tox
